<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB34">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <Button
        android:id="@+id/button26"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText1"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/button27"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText2"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button26"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button26"
        app:layout_constraintTop_toTopOf="@+id/button26" />

    <Button
        android:id="@+id/button28"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText3"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:layout_constraintTop_toTopOf="@+id/button27" />

    <Button
        android:id="@+id/button29"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText4"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

    <Button
        android:id="@+id/button30"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText5"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button29"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button29"
        app:layout_constraintTop_toTopOf="@+id/button29" />

    <Button
        android:id="@+id/button31"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText6"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toTopOf="@+id/button30" />

    <Button
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText7"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button35"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button29" />

    <Button
        android:id="@+id/button33"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText8"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button34"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32" />

    <Button
        android:id="@+id/button34"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText9"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toTopOf="@+id/button33" />

    <Button
        android:id="@+id/button35"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button36"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button36"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnText0"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button35"
        app:layout_constraintEnd_toStartOf="@+id/button37"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button35"
        app:layout_constraintTop_toTopOf="@+id/button35" />

    <Button
        android:id="@+id/button37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnTextX"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button36"
        app:layout_constraintTop_toTopOf="@+id/button36" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        app:srcCompat="@drawable/fingerprint" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/pw_msg_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/pw_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pw_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/pw_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/pw_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>